--- a/Recommendation/Core/templates/Core/index.html
+++ b/Recommendation/Core/templates/Core/index.html
@@ -26,7 +26,7 @@
 
             <div class="search-section">
                 <div class="search-container">
-                    <input type="text" id="film" placeholder="🔍 Entrez le titre d'un film...(Ex : Iron Ma)" class="search-input">
+                    <input type="text" id="film" placeholder="🔍 Entrez le titre d'un film...(Ex : Iron Man)" class="search-input">
                     <button id="post_button" data_url="{% url 'research' %}" class="btn btn-primary">Découvrir</button>
                 </div>
                 <div class="loading" id="loading"></div>
